Upgraded button css such that it is no longer hardcoded - added styling classes stackedButtonGroup, bottomrightAlign, and bottomleftAlign.

--- a/src/index.css
+++ b/src/index.css
@@ -17,71 +17,74 @@ code {
     monospace;
 }
 
-#HeatInsertToggle {
-  position:absolute;
-  /*height: 120px;*/
-  height: auto;
-  /*width: 360px;*/
-  width: auto;
-  right: 30px; /* relative to parent (canvasHolder) */
-  /*bottom: 270px;*/
-  bottom: 90px;
-  z-index: 10; /* exist on layer 4 (0 is bottom) */
-}
+/*#HeatInsertToggle {*/
+/*  position:absolute;*/
+/*  !*height: 120px;*!*/
+/*  height: auto;*/
+/*  !*width: 360px;*!*/
+/*  width: auto;*/
+/*  right: 30px; !* relative to parent (canvasHolder) *!*/
+/*  !*bottom: 270px;*!*/
+/*  bottom: 90px;*/
+/*  z-index: 10; !* exist on layer 4 (0 is bottom) *!*/
+/*}*/
 
-#GasFeedToggle {
-  position:absolute;
-  /*height: 120px;*/
-  height: auto;
-  /*width: 360px;*/
-  width: auto;
-  right: 30px;
-  /*bottom: 150px;*/
-  bottom: 10px;
-  margin-bottom: 40px;
-  z-index: 10;
-}
+/*#GasFeedToggle {*/
+/*  position:absolute;*/
+/*  !*height: 120px;*!*/
+/*  height: auto;*/
+/*  !*width: 360px;*!*/
+/*  width: auto;*/
+/*  right: 30px;*/
+/*  !*bottom: 150px;*!*/
+/*  bottom: 10px;*/
+/*  margin-bottom: 40px;*/
+/*  z-index: 10;*/
+/*}*/
 
-#KeeperElectrodeToggle {
-  position:absolute;
-  /*height: 120px;*/
-  height: auto;
-  /*width: 360px;*/
-  width: auto;
-  right: 30px;
-  /*bottom: 30px;*/
-  bottom: 10px;
-  margin-bottom: 0px;
-  z-index: 10;
-}
+/*#KeeperElectrodeToggle {*/
+/*  position:absolute;*/
+/*  !*height: 120px;*!*/
+/*  height: auto;*/
+/*  !*width: 360px;*!*/
+/*  width: auto;*/
+/*  right: 30px;*/
+/*  !*bottom: 30px;*!*/
+/*  bottom: 10px;*/
+/*  margin-bottom: 0px;*/
+/*  z-index: 10;*/
+/*}*/
 
-/* (same as #KeeperElectrodeToggle) */
-#HallThrusterToggle {
-  position:absolute;
-  /*height: 120px;*/
-  height: auto;
-  /*width: 360px;*/
-  width: auto;
-  right: 30px;
-  /*bottom: 30px;*/
-  bottom: 10px;
-  margin-bottom: 0px;
-  z-index: 10;
-}
+/*!* (same as #KeeperElectrodeToggle) *!*/
+/*#HallThrusterToggle {*/
+/*  position:absolute;*/
+/*  !*height: 120px;*!*/
+/*  height: auto;*/
+/*  !*width: 360px;*!*/
+/*  width: auto;*/
+/*  right: 30px;*/
+/*  !*bottom: 30px;*!*/
+/*  bottom: 10px;*/
+/*  margin-bottom: 0px;*/
+/*  z-index: 10;*/
+/*}*/
 
-/* (same as #GasFeedToggle) */
-#HallThrusterNext {
-  position:absolute;
-  /*height: 120px;*/
-  height: auto;
-  /*width: 360px;*/
-  width: auto;
-  right: 30px;
-  /*bottom: 150px;*/
-  bottom: 10px;
-  margin-bottom: 40px;
-  z-index: 10;
-}
+/*!* (same as #GasFeedToggle) *!*/
+/*#HallThrusterNext {*/
+/*  position:absolute;*/
+/*  !*height: 120px;*!*/
+/*  height: auto;*/
+/*  !*width: 360px;*!*/
+/*  width: auto;*/
+/*  right: 30px;*/
+/*  !*bottom: 150px;*!*/
+/*  bottom: 10px;*/
+/*  margin-bottom: 40px;*/
+/*  z-index: 10;*/
+/*}*/
+
+
+
 
 /* Div element that which holds the primary canvas element */
 #canvasHolder{
@@ -153,55 +156,81 @@ code {
    z-index: 7;
  }
 
+
+/* Buttons */
+
+.stackedButtonGroup{
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  z-index: 10;
+}
+
+.stackedButtonGroup.bottomrightAlign{
+  bottom: 0px;
+  right: 0px;
+}
+
+.stackedButtonGroup.bottomleftAlign{
+  bottom: 0px;
+  left: 0px;
+}
+
+.stackedButtonGroup > button{
+  margin-top: 0.25em;
+  margin-bottom: 0.25em;
+}
+
 /* Landing Page */
-#LearningModeButton {
-  height: auto;
-  width: auto;
-  position:absolute;
-  right: 30px;
-  bottom: 90px;
-  z-index: 10; /* Top layer */
-  font-size: medium;
-}
+/*#LearningModeButton {*/
+/*  height: auto;*/
+/*  width: auto;*/
+/*  position:absolute;*/
+/*  right: 30px;*/
+/*  bottom: 90px;*/
+/*  z-index: 10; !* Top layer *!*/
+/*  font-size: medium;*/
+/*}*/
 
-#PresModeButton {
-  height: auto;
-  width: auto;
-  font-size: 25px;
-  position:absolute;
-  right: 30px;
-  bottom: 30px;
-  z-index: 10;
-  font-size: medium;
-}
+/*#PresModeButton {*/
+/*  height: auto;*/
+/*  width: auto;*/
+/*  font-size: 25px;*/
+/*  position:absolute;*/
+/*  right: 30px;*/
+/*  bottom: 30px;*/
+/*  z-index: 10;*/
+/*  font-size: medium;*/
+/*}*/
 
-#backButton {
-  height: auto;
-  width: auto;
-  position:absolute;
-  left: 30px;
-  bottom: 50px;
-  z-index: 10;
-  font-size: medium;
-}
+/*#backButton {*/
+/*  height: auto;*/
+/*  width: auto;*/
+/*  position:absolute;*/
+/*  left: 30px;*/
+/*  bottom: 50px;*/
+/*  z-index: 10;*/
+/*  font-size: medium;*/
+/*}*/
 
 /* Presentation Mode Page */
-#nextButton {
-  height: auto;
-  width: auto;
-  position:absolute;
-  right: 30px;
-  bottom: 50px;
-  z-index: 10;
-  font-size: medium;
-}
+/*#nextButton {*/
+/*  height: auto;*/
+/*  width: auto;*/
+/*  position:absolute;*/
+/*  right: 30px;*/
+/*  bottom: 50px;*/
+/*  z-index: 10;*/
+/*  font-size: medium;*/
+/*}*/
 
-#prevButton {
-  height: auto;
-  width: auto;
-  position:absolute;
-  left: 30px;
-  bottom: 50px;
-  z-index: 10;
-  font-size: medium;
-}
+/*#prevButton {*/
+/*  height: auto;*/
+/*  width: auto;*/
+/*  position:absolute;*/
+/*  left: 30px;*/
+/*  bottom: 50px;*/
+/*  z-index: 10;*/
+/*  font-size: medium;*/
+/*}*/
